--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.2",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-bootstrap": "^2.10.1",
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.0.1",
+		"react-router-dom": "^6.22.0",
+		"sass": "^1.70.0"
 	},
 	"devDependencies": {
 		"@testing-library/dom": "^9.2.0",
